stoat/src/snapshots/stoat__test_harness__chat_replay_real_session_ls_repo_step_07_turn2_result.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: claude_message
focused: #1 of 1
mode: prompt
size: 80x24
---
[0m[38;2;128;128;128mClaude[0m

[0m[3m[38;2;128;128;128m~ Thinking... (1 lines)[0m

[0m[38;2;86;156;214m⏺ Bash(ls /Users/lee/projects/stoat)[0m
[0m[38;2;78;201;176m  done[0m
[0m[38;2;128;128;128m  └─ CLAUDE.local.md (+33 more lines)[0m

[0m[38;2;204;204;204mHere are the top-level files and directories in the repo:[0m

[0m[38;2;204;204;204m**Files:** `CLAUDE.md`, `CLAUDE.local.md`, `Cargo.lock`, `Cargo.toml`,[0m
[0m[38;2;204;204;204m`LICENSE`, `README.md`, `TODO.md`, `clippy.toml`, `config.stcfg`, `flake.lock`,[0m
[0m[38;2;204;204;204m`flake.nix`, `log.txt`, `rust-toolchain.toml`, `rustfmt.toml`, `stoat.log`,[0m
[0m[38;2;204;204;204m`test.csv`[0m

[0m[38;2;204;204;204m**Directories:** `action`, `agent`, `bin`, `config`, `examples`, `language`,[0m
[0m[38;2;204;204;204m`log`, `logs`, `references`, `scheduler`, `script`, `stoat`, `target`,[0m
[0m[38;2;204;204;204m`test_workspace`, `text`, `tmp`, `vendor`, `viewport`[0m

[0m[38;2;128;128;128m--------------------------------------------------------------------------------[0m
[0m[38;2;160;160;160m  7.5s[0m
[0m[38;2;128;128;128m--------------------------------------------------------------------------------[0m
[0m[7m [0m
[0m[1m[30m[48;2;78;201;176m PMT [0m[1m[38;2;204;204;204m[48;2;128;128;128m (unnamed) [0m[38;2;204;204;204m[48;2;128;128;128m[claude]                                                        [0m
